--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 /* Navbar */
 .navbar {
     /*background-color: #fb646b8d;  apenas pra ficar visivel de vez em quando */
-    padding-right: 15px;
+    padding-right: 20px;
     justify-content: space-between;
     align-items: center;
     margin: 0;
@@ -59,7 +59,7 @@ body {
 }
 
 .logo{
-    padding: 5px;
+    padding: 2px;
 }
 
 .checkbtn {
@@ -91,7 +91,7 @@ form div {
     padding: 6px;
 }
 
-form input {
+form input, form button {
     outline: unset;
     padding: 20px;
     min-width: 450px;
@@ -107,7 +107,7 @@ form input:focus {
     transition: 0.6s;
 }
 
-form input[type=button] {
+.input-btn {
     background-color: #FB646B;
     color: white;
     cursor: pointer;
@@ -116,7 +116,7 @@ form input[type=button] {
     width: 100%;
 }
 
-form input[type=button]:hover {
+.input-btn:hover {
     background-color: #f83d46;
     transition: 0.1s;
 }
@@ -154,31 +154,64 @@ footer {
 }
 .footer-item{
     list-style: none;
-    padding-left: 20px;
+    padding-left: 10px;
 }
 .footer-item a {
     text-decoration: none;
     color: white;
 }
 .copyright {
-    padding: 10px;
+    padding: 5px;
 }
+
 
 /* Bem Vindo */
 
-section {
+section{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    gap: 20px;
 }
+
+h1 {
+    min-width: 450px;
+    font-size: 24px;
+}
+
+section h1, section form {
+    min-width: 450px;
+    font-family: Inter;
+    transition: 0.3s;
+}
+
+.container {
+        justify-content: space-around;
+        align-items: center;
+        padding: 6px;
+    }
 
 .title {
     text-align: center;
+    color: white;
+    border-radius: 90px;
+    padding: 10px;
+}
+
+.input-btn2 {
     background-color: #FB646B;
-    width: 60%;
-    color: black;
-    padding: 20px;
-    border-radius: 30px;
+    color: white;
+    cursor: pointer;
+    font-family: Inter;
+    width: 100%;
+    font-size: 10px;
+    margin-top: 20px;
+}
+
+.input-btn2:hover {
+    background-color: #f83d46;
+    transition: 0.1s;
 }
 
 /* RESPONSIVIDADE */
@@ -219,8 +252,8 @@ section {
         display: flex;
     }
 
-    form input {
-        min-width: 300px;
+    form input, form button {
+        max-width: 300px;
         transition: 0.1s;
     }
 }
@@ -232,7 +265,7 @@ section {
         justify-content: center;
     }
 
-    form input {
+    form input, form button {
         min-width: 280px;
         transition: 0.1s;
     }
@@ -252,7 +285,7 @@ section {
         justify-content: center;
     }
 
-    form input {
+    form input, form button {
         min-width: 250px;
         transition: 0.1s;
     }
@@ -269,7 +302,7 @@ section {
         justify-content: center;
     }
 
-    form input {
+    form input, form button{
         min-width: 180px;
         transition: 0.1s;
     }
